--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 author:
   name             : "Karen Geerts"
   avatar           : "/assets/images/BW_avatar.jpg"
-  bio              : "Curious."
+  bio              : "I have no special talent. I am only passionately curious."
   location         : "Melbourne"
   email            :
   uri              :
