--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 author:
   name             : "Karen Geerts"
   avatar           : "/assets/images/BW_avatar.jpg"
-  bio              : "I have no special talent. I am only passionately curious."
+  bio              : "I have no special talent. I am only passionately curious. - Albert Einstein"
   location         : "Melbourne"
   email            :
   uri              :
@@ -119,7 +119,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "karengeerts" 
+  linkedin         : "karengeerts"
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
